--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <configuration>
-        <mainClass>de.codesourcery.springmass.springmass.Main</mainClass>
+        <mainClass>de.codesourcery.threadwatcher.Main</mainClass>
        </configuration>
      </plugin>
      <plugin>
